--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "autokiosk-pro",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Auto fullscreen browser with scheduled reminders and shutdown",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "clean": "if exist dist rmdir /s /q dist",
+    "prebuild": "npm run clean",
     "build": "electron-builder --win",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
